--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<head>
 		  <meta charset ="utf-8">
           <title>3alas</title>
-		  
+		  <link href ="estilos.css" rel "stylesheet">
 
 		</head>
 		
